# chess-vision

./: .gitignore  .gitmodules  README.md  arch.drawio  board_detection.py  crop_board.py  dev-compose.yml  load_data.py  makefile  piece_classification.py  process.py  prod-compose.yml  requirements.txt  utils.py
backend/engine/: Cargo.toml  Dockerfile
backend/engine/src/: main.rs
backend/results/: Cargo.toml  Dockerfile  rustfmt.toml
backend/results/src/: main.rs  utils.rs
backend/shared/: Cargo.toml
backend/shared/src/: message.rs
backend/stage/: Cargo.toml  Dockerfile
backend/stage/src/: file.rs  main.rs  utils.rs
backend/stage/src/wrapper/: mod.rs
backend/upload/: Cargo.toml  Dockerfile
backend/upload/src/: file.rs  main.rs  utils.rs
engine/: Cargo.toml  Dockerfile
engine/src/: board.rs  engine.rs  main.rs
models/: .dockerignore  .gitignore  Dockerfile  board_detection.py  board_segmentation.py  check.py  corners.py  label.py  piece_classification.py  requirements.docker.txt  requirements.txt  service.py  test.py
models/utils/: corners.py  load_data.py  process.py  utils.py
results/: Cargo.toml  Dockerfile
results/src/: main.rs  utils.rs
stage_wrapper/: .dockerignore  Cargo.toml  Dockerfile
stage_wrapper/src/: file.rs  main.rs  message.rs  utils.rs  wrapper.rs
stage_wrapper/src/wrapper/: mod.rs  python.rs
test_service/: Cargo.toml
test_service/src/: main.rs  utils.rs
web/: .dockerignore  Dockerfile  custom.d.ts  package-lock.json  package.json  pnpm-lock.yaml  prettier.config.js  tailwind.config.js  tsconfig.json
web/app/: globals.css  head.jsx  head.tsx  hooks.ts  layout.jsx  layout.tsx  page.jsx  page.tsx
web/app/api/check/: route.ts
web/app/api/check/[id]/: route.ts
web/app/api/generate/: route.ts
web/app/api/upload/: route.ts
web/app/components/: Board.tsx
web/app/pieces/: util.ts
web/app/test/: page.tsx
web/lib/: config.ts  external.ts
web/pages/api/: upload.ts
web/src/pages/: index.tsx
web/src/pages/api/: hello.ts
