[package]
name = "engine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.26.0", features = ['full'] }
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.94"
serde_bytes = "0.11.9"
futures = "0.3.26"
axum = "0.6.11"
