[package]
name = "app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pyo3 = "0.18.0"
tokio = { version = "1.26.0", features = ['full'] }
tokio-amqp = "2.0.0"
lapin = "2.1.1"
futures = "0.3.26"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.94"
serde_bytes = "0.11.9"
reqwest = "0.11.14"
bytes = "1.4.0"
md5 = "0.7.0"
