[package]
name = "app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
shared = { path = "../shared" }

anyhow = "1.0"
pyo3 = "0.19"
tokio = { version = "1.28", features = ["full"] }
tokio-retry = "0.3"
futures = "0.3"
reqwest = "0.11"
bytes = "1.4"
md5 = "0.7"
lazy_static = "1.4"
